--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,15 @@ theme: minima
 plugins:
   - jekyll-feed
 
+defaults:
+  -
+    scope:
+      path: "posts"
+      type: "posts"
+    values:
+        layout: "post"
+        author: "yoshi"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
