--- a/_config.yml
+++ b/_config.yml
@@ -140,7 +140,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: https://github.com/ym0ri
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -155,7 +155,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - _pages
+  - "_pages"
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -290,3 +290,10 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: "/_pages/"
+      type: pages 
+    values:
+      layout: single
+      author_profile: true
