--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ subtitle                 : "phd student" # site tagline that appears below site 
 name                     : "yoshiya mori"
 description              : "yoshi's phd website"
 url                      : https://ym0ri.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               : ym0ri # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -281,7 +281,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
@@ -289,10 +289,10 @@ defaults:
       read_time: true
       comments: # true
       share: true
-      related: true
+      # related: true
   # _pages
   - scope:
-      path: "/_pages/"
+      path: ""
       type: pages 
     values:
       layout: single
