--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
   - title: "About"
-    url: /about/
+    url: /
   - title: "Research"
     url: /research/
   - title: "Posts"
-    url: /year-archive/
+    url: /posts/
   # - title: "Sitemap"
   #   url: /sitemap/
