change main website name

--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-AU"
-title                    : "yoshi's research"
+title                    : "yoshiya mori"
 title_separator          : "-"
 subtitle                 : "" # site tagline that appears below site title in masthead
 name                     : "yoshiya mori"
-description              : "yoshi's phd website"
+description              : "yoshi's research"
 url                      : https://ym0ri.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 # repository               : ym0ri # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Yoshiya Mori"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Astrophysics PhD student @ Monash University."
+  bio              : "Astrophysics PhD student @ Monash University"
   location         : "Melbourne, Australia"
   email            : yoshiya.mori@monash.edu
   links:
