remove posts tab, fix about

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "yoshiya mori"
 title_separator          : "-"
 subtitle                 : "" # site tagline that appears below site title in masthead
 name                     : "yoshiya mori"
-description              : "yoshi's research"
+description              : "yoshiya mori"
 url                      : https://ym0ri.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 # repository               : ym0ri # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
