fix linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ author:
       # url: "https://instagram.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: www.linkedin.com/in/yoshiya-mori
+      url: https://www.linkedin.com/in/yoshiya-mori
 
 # Site Footer
 footer:
