--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,11 @@
 # main links
 main:
-  - title: "About"
-    url: /about/
+  # - title: "About"
+    # url: /about/
+  - title: "Publications"
+    url: /publications/
+  - title: "Talks"
+    url: /talks/
   - title: "Research"
     url: /research/
   # - title: "Posts"
