--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  # - title: "About"
-    # url: /about/
+  - title: "About"
+    url: /
   - title: "Publications"
     url: /publications/
   - title: "Talks"
