--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /publications/
   - title: "Talks"
     url: /talks/
-  - title: "Research"
-    url: /research/
+  - title: "Resources"
+    url: /resources/
   # - title: "Posts"
   #   url: /posts/
