--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -27,7 +27,7 @@ en: &DEFAULT_EN
   comments_title             : "Comments"
   more_label                 : "Learn more"
   related_label              : "You may also enjoy"
-  follow_label               : "Follow:"
+  follow_label               : "" # default: Follow:
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
   website_label              : "Website"
@@ -44,7 +44,7 @@ en: &DEFAULT_EN
   comment_btn_submitted      : "Submitted"
   comment_success_msg        : "Thanks for your comment! It will show on the site once it has been approved."
   comment_error_msg          : "Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again."
-  loading_label              : "Loading..."
+  loading_label              : "loading..."
   search_label_text          : "Enter your search term..."
   search_placeholder_text    : "Enter your search term..."
   search_algolia_no_results  : "No results"
