add research tab
research tab and new resource links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,14 @@
 # main links
 main:
-  - title: "About"
+  - title: "about"
     url: /
-  - title: "Publications"
+  - title: "publications"
     url: /publications/
-  - title: "Talks"
+  - title: "research"
+    url: /research/
+  - title: "talks"
     url: /talks/
-  - title: "Resources"
+  - title: "resources"
     url: /resources/
   # - title: "Posts"
   #   url: /posts/
